kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tastytap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tastytap
  template:
    metadata:
      labels:
        app: tastytap
    spec:
      containers:
        - name: app
          image: "gabrielronei/tastytap:latest"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 500Mi
