kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tastytap
spec:
  type: ClusterIP
  selector:
    app: tastytap
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
